# instructprompt

./: README.md  pyproject.toml
instructprompt/: __init__.py
