[tool.poetry]
name = "instructprompt"
version = "0.1.5"
description = ""
authors = ["krrishdholakia <krrishdholakia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
chromadb = "^0.3.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
